@@ -33,7 +33,7 @@ requires:
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Map-Tube-Singapore
-  homepage: https://github.com/tupinek/Map-Tube-Singapore
+  homepage: https://github.com/michal-josef-spacek/Map-Tube-Singapore
   license: http://opensource.org/licenses/artistic-license-2.0.php
-  repository: git://github.com/tupinek/Map-Tube-Singapore
+  repository: git://github.com/michal-josef-spacek/Map-Tube-Singapore
 version: '0.05'
