@@ -28,8 +28,8 @@ requires 'namespace::clean' => 0;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Map-Tube-Singapore';
-resources 'homepage' => 'https://github.com/tupinek/Map-Tube-Singapore';
-resources 'repository' => 'git://github.com/tupinek/Map-Tube-Singapore';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Map-Tube-Singapore';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Map-Tube-Singapore';
 test_requires 'English' => 0;
 test_requires 'Test::Map::Tube' => 0.35;
 test_requires 'Test::More' => 0;
