@@ -234,7 +234,7 @@ SEE ALSO
         Install the Map::Tube concrete metro modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Map-Tube-Singapore>
+    <https://github.com/michal-josef-spacek/Map-Tube-Singapore>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
