@@ -189,8 +189,8 @@ For more information about Singapore Map, click L<here|https://en.wikipedia.org/
 
 =begin html
 
-<a href="https://raw.githubusercontent.com/tupinek/Map-Tube-Singapore/master/images/Singapore.png">
-  <img src="https://raw.githubusercontent.com/tupinek/Map-Tube-Singapore/master/images/Singapore.png" alt="Mass Rapid Transit" width="300px" height="300px" />
+<a href="https://raw.githubusercontent.com/michal-josef-spacek/Map-Tube-Singapore/master/images/Singapore.png">
+  <img src="https://raw.githubusercontent.com/michal-josef-spacek/Map-Tube-Singapore/master/images/Singapore.png" alt="Mass Rapid Transit" width="300px" height="300px" />
 </a>
 
 =end html
@@ -309,7 +309,7 @@ Install the Map::Tube concrete metro modules.
 
 =head1 REPOSITORY
 
-L<https://github.com/tupinek/Map-Tube-Singapore>
+L<https://github.com/michal-josef-spacek/Map-Tube-Singapore>
 
 =head1 AUTHOR
 
